[package]

name = "consul"
version = "0.3.0"
edition = "2018"
authors = ["Ammar Zuberi <az@cloudflare.com>", "Andrew Useckas <andrew.useckas@threat-x.com>", "Stu Small <stuart.small@threat-x.com>", "YoungKing <yanckin@gmail.com>"]
description = "Async Rust client library for Consul HTTP API based on consul-rust"
documentation = "https://docs.rs/consul/"
repository = "https://github.com/ammarzuberi/consul-async"
license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["consul", "discovery"]

[dependencies]
error-chain = "0.12"
serde = "1"
serde_derive = "1"
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
url = "2.1"
async-trait = "0.1.41"

# Used to test async functions that return futures
[dev-dependencies]
tokio = { version = "0.2" }
tokio-test = "*"